BTWCT-1224: Fixed hover color and banner positioning on mobile

--- a/waters-aem-frontend/src/styles/banner.scss
+++ b/waters-aem-frontend/src/styles/banner.scss
@@ -289,7 +289,8 @@
         @include mobile {
             width: 100%;
             left: 14%;
-            height: 100%;
+            height: 90%;
+            top: 5%;
         }
     }
 
